--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -34,7 +34,7 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     line-height: 1.6;
-    background-image: 
+    background-image:
         linear-gradient(rgba(10, 10, 22, 0.9), rgba(10, 10, 22, 0.9)),
         url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 18c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm48 25c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm-43-7c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm63 31c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM34 90c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm56-76c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM12 86c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm28-65c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm23-11c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-6 60c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm29 22c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zM32 63c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm57-13c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-9-21c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM60 91c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM35 41c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM12 60c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2z' fill='%231a1a2e' fill-opacity='0.2' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
@@ -699,6 +699,37 @@ input[type="text"]:focus + .input-border {
     margin-top: 2rem;
 }
 
+/* Tools Status */
+.tools-status {
+    margin-bottom: 1.5rem;
+}
+
+.status-message {
+    padding: 1rem;
+    border-radius: var(--border-radius);
+    margin-bottom: 1rem;
+}
+
+.status-message.warning {
+    background-color: rgba(255, 255, 0, 0.1);
+    border: 1px solid var(--warning-color);
+    color: var(--warning-color);
+}
+
+.tools-details {
+    margin-top: 0.5rem;
+    font-size: 0.9rem;
+}
+
+.tools-details ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.tools-details li {
+    margin-bottom: 0.25rem;
+}
+
 /* Error Section */
 .error-section {
     display: flex;
@@ -848,39 +879,39 @@ footer {
         flex-direction: column;
         text-align: center;
     }
-    
+
     nav {
         margin-top: 1rem;
     }
-    
+
     nav ul {
         justify-content: center;
     }
-    
+
     .scan-info {
         flex-direction: column;
         gap: 0.5rem;
     }
-    
+
     .host-item {
         flex-direction: column;
         align-items: flex-start;
     }
-    
+
     .host-status {
         margin: 0.5rem 0;
     }
-    
+
     .tab-header {
         flex-direction: column;
         align-items: flex-start;
     }
-    
+
     .tab-actions {
         margin-top: 0.5rem;
         width: 100%;
     }
-    
+
     .filter-input {
         flex: 1;
     }
